# CppMediaPlayer

./: .gitignore  CMakeLists.txt  CppMediaPlayer.pro  README  README.md  control  deb.sh  depends.md  deploy_windows.bat  setup.iss
doc/: depends.md
share/: cpp-media-player.desktop
src/: CMakeLists.txt  actions.cxx  actions.hh  control.cxx  control.hh  editmenu.cxx  editmenu.hh  filemenu.cxx  filemenu.hh  global.hh  helpmenu.cxx  helpmenu.hh  icons.qrc  main.cxx  recent.cxx  recent.hh  recent_action.cxx  recent_action.hh  seekbar.cxx  seekbar.hh  src.pri  tray.cxx  tray.hh  videopane.cxx  videopane.hh  videopane_menu.cxx  videopane_menu.hh  viewmenu.cxx  viewmenu.hh  window.cxx  window.hh
src/menubar/: editmenu.cxx  filemenu.cxx  helpmenu.cxx  menubar.cxx  menubar.hh  menubar.pri  viewmenu.cxx  viewmenu.hh
src/playlist/: listwidget.cxx  listwidget.hh  playlist.cxx  playlist.hh  playlist.pri  settings.hh  settingswidget.cxx  settingswidget.hh
src/settings/: dialog.cxx  dialog.hh  get_settings.cxx  get_settings.hh  settings.pri  settings_dialog.cxx  taskbar_icon.cxx  taskbar_icon.hh  volume.cxx  volume.hh  volume_dial.cxx  volume_dial.hh
test/: README
